--- a/blog/templates/partials/roq-default/sidebar-copyright.html
+++ b/blog/templates/partials/roq-default/sidebar-copyright.html
@@ -1,3 +1,3 @@
 <section class="copyright overridden">
-  <p>{now.format('Y')} &copy; {site.data.simple-name}</p>
+  <p>{=now.format('Y')} &copy; {=site.data.simple-name}</p>
 </section>
