Mix fixes and new post

--- a/roq-theme/default/src/main/resources/templates/theme-layouts/roq-default/post.html
+++ b/roq-theme/default/src/main/resources/templates/theme-layouts/roq-default/post.html
@@ -8,9 +8,9 @@ asciidoc-attributes:
 
 {#insert before-article /}
 
-<article class="article-page">
+<article class="article-page" xmlns="http://www.w3.org/1999/html">
   {#insert article-start /}
-  <div class="page-content">
+  <section class="page-content">
     {#if page.image}
     <div class="page-cover-image">
       <figure>
@@ -62,8 +62,8 @@ asciidoc-attributes:
         {/let}
         {/if}
       </div>
-    </div> <!-- End Wrap Content -->
-  </div> <!-- End Page Content -->
+    </section> <!-- End Wrap Content -->
+  </section> <!-- End Page Content -->
   {#insert article-end /}
 </article> <!-- End Article Page -->
 
