--- a/roq-theme/default/src/main/resources/templates/theme-layouts/roq-default/index.html
+++ b/roq-theme/default/src/main/resources/templates/theme-layouts/roq-default/index.html
@@ -17,7 +17,7 @@ layout: roq-default/main
   {/if}
   <div class="post-content">
     <h2 class="post-title"><a href="{post.url}">{post.title}</a></h2>
-    <p>{post.description}</p>
+    <p>{post.description ?: post.contentAbstract}</p>
     <span class="post-date">{post.date.format('yyyy, MMM dd')}&nbsp;&nbsp;&nbsp;—&nbsp;</span>
     <span class="post-words">
       {post.readTime} minute(s) read
