Lightning Live-Reload and doc cleaning

--- a/blog/templates/layouts/roq-default/main.html
+++ b/blog/templates/layouts/roq-default/main.html
@@ -15,7 +15,7 @@ layout: theme-layouts/roq-default/main
 <footer>
   {#include partials/roq-default/sidebar-contact /}
   <section class="support">
-    <p><b>To support me, give me some stars:</b></p>
+    <p><b>You like Roq, give it a star:</b></p>
     <!-- Place this tag where you want the button to render. -->
     <a class="github-button" href="https://github.com/quarkiverse/quarkus-roq" data-color-scheme="no-preference: light; light: light; dark: dark;" data-icon="octicon-star" data-size="large" data-show-count="true" aria-label="Star quarkiverse/quarkus-roq on GitHub">Star</a>
   </section>
